--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "recharts": "^3.6.0",
     "@capacitor/core": "^6.0.0",
     "@capacitor/filesystem": "^6.0.0",
-    "@capacitor-community/file-opener": "^6.0.0"
+    "@capacitor-community/file-opener": "^6.0.0",
+    "@capacitor/app": "^6.0.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
